bin/tests/errors/parser/parser_err_expected_type_or_symbol.swg
#global fileprivate

alias A = 1 + 2 // swc-expected-error {{parser_err_expected_type_or_symbol}}
